Addind updatemetadata endpoint+ theme in channels
